fix: qr-button being offscreen

--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -1,6 +1,6 @@
 @import '../helper/variables.scss';
 
-div.navbar {
+.navbar {
   padding: 10px;
 
   position: fixed;
