--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,9 +20,21 @@
   box-sizing: border-box;
 }
 
+#__next {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+  flex-direction: column;
+}
+
 body {
   background-color: $dark-color;
   color: $light-color;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
 
   .text-primary {
     color: $primary-color;
